# Agentic-Time-Series-Forecaster

./: .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  deploy_docs.py
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml  question.yaml
.github/workflows/: ci.yaml  deploy-docs.yaml  notify-release.yaml  preview-docs.yaml  release.yaml
docs/: forecasting-parameters.md  index.md
docs/api/: agent.md  forecaster.md
docs/blog/: .authors.yml
docs/changelogs/: index.md  v0.0.10.md  v0.0.11.md  v0.0.12.md  v0.0.13.md  v0.0.14.md  v0.0.15.md  v0.0.16.md  v0.0.17.md  v0.0.18.md  v0.0.19.md  v0.0.20.md  v0.0.21.md  v0.0.22.md
docs/community/: help.md  roadmap.md
docs/examples/: agent-quickstart.ipynb  anomaly-detection-forecaster-quickstart.ipynb  aws-bedrock.ipynb  chronos-family.ipynb  cryptocurrency-quickstart.ipynb  forecaster-quickstart.ipynb  gift-eval.ipynb  llm-providers.ipynb  ts-foundation-models-comparison-quickstart.ipynb
docs/experiments/: fev.md  gift-eval.md
docs/getting-started/: installation.md  introduction.md  quickstart.md
docs/stylesheets/: extra.css
experiments/fev/: README.md  pyproject.toml
experiments/fev/src/: download_results.py  evaluate_model.py  evaluate_model_modal.py
experiments/gift_eval/: Makefile  README.md  pyproject.toml
experiments/gift_eval/src/: download_results.py  run_modal.py  run_timecopilot.py
tests/: conftest.py  test_agent.py  test_forecaster.py  test_gift_eval.py  test_live.py
time_copilot/: __init__.py  _cli.py  agent.py  forecaster.py
(+39 files in other folders)
